# shadowpaste

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
src/: clipboard_view.rs  db.rs  embed.rs  main.rs  monitor.rs  quick_paste.rs  titlebar.rs
