[package]
name = "shadowpaste"
version = "0.1.0"
authors = ["cyan <jeffrey.magmachu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
tokio = { version = "1.49.0", features = ["full"] }
clipboard-master = "4.0.0"
arboard = "3.6.1"
image = "0.25.9"
base64 = "0.22.1"
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = "0.4"
dirs = "6"
fastembed = { version = "5.9.0", features = ["image"] }
anyhow = "1.0.101"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
